--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,28 @@
           </execution>
         </executions>
       </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-antrun-plugin</artifactId>
+        <version>1.8</version>
+        <executions>
+          <execution>
+            <phase>install</phase>
+            <goals>
+              <goal>run</goal>
+            </goals>
+            <configuration>
+              <target>
+                <copy file="bintray-template.json" tofile="${project.build.directory}/bintray.json">
+                  <filterset>
+                    <filter token="VERSION" value="${project.version}"/>
+                  </filterset>
+                </copy>
+              </target>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
     </plugins>
   </build>
 </project>
