Moved properties into the base NickelTestResource, added YAML test resource

--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,12 @@
       <version>${jackson.version}</version>
       <optional>true</optional>
     </dependency>
+    <dependency>
+      <groupId>org.yaml</groupId>
+      <artifactId>snakeyaml</artifactId>
+      <version>1.23</version>
+      <optional>true</optional>
+    </dependency>
 
     <!-- Test dependencies -->
     <dependency>
